--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,5 @@
 spring.application.name=cbook-app
+spring.profiles.active=prod
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jdbcdb?useSSL=false
-spring.datasource.username=dbuser
-spring.datasource.password=dbuser!
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
 
