--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 
 greetings=Greetings from Dev profile
-spring.datasource.url=jdbc:mysql://localhost:3306/jdbcdb?useSSL=false
-spring.datasource.username=dbuser
-spring.datasource.password=dbuser!
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Yaswanth@123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
