--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=cbook-app
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 
-
+spring.liquibase.change-log=classpath:/db-migration/db-changelogs.xml
+spring.liquibase.enabled=true
