Added spring actuators

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.profiles.active=dev
 
 spring.liquibase.change-log=classpath:/db-migration/db-changelogs.xml
 spring.liquibase.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoints.health.show-details=always
